--- a/02.System admin/Linux/16.Network-config-centos7.md
+++ b/02.System admin/Linux/16.Network-config-centos7.md
@@ -2,7 +2,7 @@
 Để xem cấu hình các interface network trên CentOS7 dùng lệnh:
 
     # ip a
-![netw-centos7-1](../img/netw-centos7/netw-centos7-1.png)
+![netw-centos7-1](../img/netw-centos7-1.png)
 
 - Các interface là l0 và enp0s3
 - mtu 65536 hay mtu 1500 là maximum transmission unit
@@ -11,7 +11,7 @@
 - Kiểm tra network bằng lệnh ping. VD:
     
         # ping google.com
- ![ipcheck](../img/netw-centos7/ipcheck.png)
+ ![ipcheck](../img/ipcheck.png)
  Kết quả trả về như hình là có mạng.
 
  <h2 style="color:orange">Xem thông tin interface network</h2>
@@ -20,14 +20,14 @@
 
         # ls /etc/sysconfig/network-scripts
 
-![netw-centos7-2](../img/netw-centos7/netw-centos7-2.png)
+![netw-centos7-2](../img/netw-centos7-2.png)
 Ở đây hiện 2 interface là: enp0s3 và lo<br>
 Network interface của centos tên là `enp0s3`
 - Để xem thông tin card mạng:
 
         # cat /etc/sysconfig/network-scripts/ifcfg-enp0s3
 
-![newt-centos7-3](../img/netw-centos7/netw-centos7-3.png)
+![newt-centos7-3](../img/netw-centos7-3.png)
 
 TYPE: ethernet, có thể là bonding.
 BOOTPROTO có các option:<br>
@@ -49,14 +49,14 @@ Sử dụng lệnh:
   
     # vim /etc/sysconfig/network-scripts/ifcfg-enp0s3
 để chỉnh sửa và thêm cấu hình ip tĩnh:
-![newt-centos7-4](../img/netw-centos7/netw-centos7-4.png)
+![newt-centos7-4](../img/netw-centos7-4.png)
 
 Sử dụng lệnh:
 
     # ifdown enp0s3 và
     # ifup enp0s3
 để reset card mạng (thực thi file cấu hình)
-![newt-centos7-5](../img/netw-centos7/netw-centos7-5.png)
+![newt-centos7-5](../img/netw-centos7-5.png)
 - Tương tự để chỉnh lại cấu hình DHCP, chỉnh lại dòng BOOTPROTO=dhcp rồi lại down và up card mạng để thực thi cấu hình.
 
 <h2 style="color:orange">Xem default-gateway</h2>
@@ -64,7 +64,7 @@ SỬ dụng lệnh:
     
     # ip route show
 để xem dafault-gateway
-![newt-centos7-6](../img/netw-centos7/netw-centos7-6.png)
+![newt-centos7-6](../img/netw-centos7-6.png)
 
 Default via thể hiện default-gateway.
 
@@ -75,23 +75,23 @@ Default via thể hiện default-gateway.
     + 127.0.0.1 <=> localhost.localdomain
     + ::1 <=> localhost.localdomain
 
-![newt-centos7-7](../img/netw-centos7/netw-centos7-7.png)
+![newt-centos7-7](../img/netw-centos7-7.png)
 <h2 style="color:orange">/etc/resolv.conf</h2>
 File để cấu hình DNS
 
-![newt-centos7-8](../img/netw-centos7/netw-centos7-8.png)
+![newt-centos7-8](../img/netw-centos7-8.png)
 <h2 style="color:orange">Cấu hình IP bằng giao diện GUI</h2>
 Gõ lệnh:
     
     # nmtui
 - Cửa sổ NetworkManager TUI hiện ra , chọn Edit a connection => OK
-![newt-centos7-9](../img/netw-centos7/netw-centos7-9.png)
+![newt-centos7-9](../img/netw-centos7-9.png)
 Chọn Card mạng cần đặt IP ( enp0s3 ):
-![newt-centos7-10](../img/netw-centos7/netw-centos7-10.png)
+![newt-centos7-10](../img/netw-centos7-10.png)
 Chọn IPV4 CONFIGURATION => Manual
-![newt-centos7-11](../img/netw-centos7/netw-centos7-11.png)
+![newt-centos7-11](../img/netw-centos7-11.png)
 Đặt các thông số IP => OK
-![newt-centos7-12](../img/netw-centos7/netw-centos7-12.png)
+![newt-centos7-12](../img/netw-centos7-12.png)
 
 <h2 style="color:orange">nmcli</h2>
 
