--- a/02.System admin/Linux/09.KVM.md
+++ b/02.System admin/Linux/09.KVM.md
@@ -7,7 +7,7 @@
 - Các máy ảo chia sẻ tài nguyên như CPU, băng thông mạng và bộ nhớ với máy vật lý.
 - KVM đã được tích hợp và cung cấp trong các phiên bản phân phối Linux từ năm 2007.
 
-2.`Tính năng`
+2.`Ưu điểm`
 - Hiệu năng cao.
 - Bảo mật.
 - Tính ổn định.
